test/spec_vectors/table_set/fail/module_5.wat
(module (table $t 10 funcref) (func $type-value-externref-vs-funcref (param $r externref) (table.set $t (i32.const 1) (local.get $r))))